--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,10 @@ machine:
     version: 2.7.11
   ruby:
     version: 2.3.1
+  environment:
+    GOPATH: "${HOME}/${CIRCLE_PROJECT_REPONAME}/.go_workspace"
+    mmark_src: github.com/miekg/mmark/mmark
+    mmark: ./mmark
 
 checkout:
   post:
@@ -11,7 +15,8 @@ checkout:
 dependencies:
   pre:
     - pip install xml2rfc
-    - gem install --no-doc kramdown-rfc2629
+    - head -1 -q *.md | grep '^\-\-\-' >/dev/null 2>&1 && gem install --no-doc kramdown-rfc2629
+    - head -1 -q *.md | grep '^%%%' >/dev/null 2>&1 && go get "$mmark_src" && go build "$mmark_src"
 
 test:
   override:
